--- a/docs/sql/sfmc-sql-date-functions.mdx
+++ b/docs/sql/sfmc-sql-date-functions.mdx
@@ -11,7 +11,7 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 Salesforce Marketing Cloud SQL implementation does not support user-defined functions. There are, however, multiple built-in functions that are useful on a day-to-day basis when working with queries.
 
-Here, I will cover only selected date functions, that I find most useful for Marketing Automation purposes. They will help you find the current date or format it to match your needs.
+Here, I will cover only selected date functions, that I find most useful for Marketing Automation purposes. They will help you find the current date, calculate a new one or format it to match your needs.
 
 ## GETDATE & GETUTCDATE
 
@@ -28,40 +28,106 @@ SELECT
 
 :::
 
-The `GETUTCDATE` function works the same as `GETDATE` but returns DateTime in UTC timezone.
+The `GETUTCDATE` function works the same as `GETDATE` but returns datetime in UTC timezone.
 
 ```sql {2}
 SELECT
     GETUTCDATE() as CurrentUTCDate
 ```
 
-Both return a DateTime object (for example `Oct 30 2020 1:15AM`), so no conversion is needed to use other Date Functions on the outcome of this function.
+Both return a datetime object (for example `Oct 30 2020 1:15AM`), so no conversion is needed to use other Date Functions on the outcome of this function.
 
-You can, however, limit its output to either only date or time part by using [`CONVERT`](sfmc-sql-conversion-functions#convert) or [`FORMAT`](#format-with-dates) Functions.
+You can, however, limit its output to either only date or time part by using [`CONVERT`](sfmc-sql-conversion-functions#case--convert) or [`FORMAT`](#format-with-dates) Functions.
+
+## DATEADD
+
+The `DATEADD` functions give you the power to add and subtract from your date values.
+
+```sql {2-3} title="Add seven days to current UTC date"
+SELECT
+    GETUTCDATE() AS TrialStartDate,
+    DATEADD(DAY, 7, GETUTCDATE()) as TrialEndDate
+```
+
+It requires three things:
+
+1. Date part - The date element that will be changed
+2. Number - The integer (or an expression evaluating to integer) for interval
+3. Date - The original date that will be changed by the `DATEADD` function. It can be in any date data type. The output will be of the same type.
+
+`DATEADD` is especially useful when used with the [`WHERE`](sfmc-sql-where) statement, as it allows to filter records dynamically:
+
+```sql {5} title="Find all Subscribers that joined within the last month"
+SELECT
+    SubscriberKey,
+    EmailAddress
+FROM ENT._Subscribers
+WHERE DateJoined >= DATEADD(MONTH, -1, GETDATE())
+```
+
+:::note You Should Know
+
+`DATEADD` does not take into consideration timezone offset.
+
+However, if you are changing the date with 31st day of the month by months and the outcome month is shorter, SQL will account for that and return the last day of a given month.
+
+:::
+
+### Date parts
+
+You can reference date parts both by its full name, as well as an abbreviation.
+
+| Date part | Abbreviations |
+| -- | -- |
+| YEAR | yy, yyyy |
+| QUARTER | qq, q |
+| MONTH | mm, m |
+| DAYOFYEAR | dy, y |
+| DAY | dd, d |
+| WEEK | wk, ww |
+| WEEKDAY | dw, w |
+| HOUR | hh |
+| MINUTE | mi, n |
+| SECOND | ss, s |
+| MILLISECOND | ms |
+| MICROSECOND | mcs |
+| NANOSECOND | ns |
+
+`DAYOFYEAR`, `DAY`, and `WEEKDAY` are considered the same date part and return the equal value.
+
+For 99% of SFMC needs, you will be just fine with `YEAR`, `MONTH`, `DAY`, `HOUR` and `MINUTE`. Using only those with the full name will make your queries readable and straightforward for everyone.
+
+:::note You Should Know
+
+Very similar date calculation is also available with `DATEADD()` AMPScript function. Depending on the use case, consider whether you want to manipulate the date in the Data Extension or only in the communication.
+
+:::
 
 ## FORMAT with Dates
 
-The `FORMAT` works only with DateTime and numeric values and requires:
+The `FORMAT` works only with datetime and numeric values and requires:
 
-1. Value to be formatted (can be a column, string or function)
+1. Value to be formatted (can be a column, string or a function)
 2. Format specifier to be applied
 3. Optionally - ISO culture code
 
-It is a perfect tool to manipulate any dates (or date strings) available in your Data Extensions. For personalization. For comparison between system and imported dates outside of the query. For preparing data to export it to an external system with specific format requirements.
+It is a perfect tool to manipulate any dates (or date-like strings with the help of [conversion](sfmc-sql-conversion-functions)) available in your Data Extensions. For personalization. For comparison between system and imported dates outside of the query. For preparing data to export it to an external system with specific format requirements.
 
 ```sql {2-4} title="Instead of creating complex AMPScript logic to adapt dates, format them"
 SELECT
-    FORMAT(CONVERT(DateTime, '10/30/2020'), 'd', 'en-GB') AS DateOrderedProperly,
+    FORMAT(CONVERT(DATE, '10/30/2020'), 'd', 'en-GB') AS DateOrderedProperly,
     FORMAT(GETUTCDATE(), 'dd/MM/yyyy') AS TodayCustomFormat,
     FORMAT(DateJoined, 'D', 'de-DE') AS DateExpandedIndian
 
 ```
 
-In the example above, the first two `FORMAT` functions return date in the same format - `30/10/2020` - one by using manually provided one, another by taking the current UTC date. The last line outputs `Freitag, 7. Februar 2020`. Use case? For example, run it with [`CASE`](sfmc-sql-case) to change your short date into a language-personalized extended date.
+In the example above, the first two `FORMAT` functions return date in the same format - `30/10/2020` - one by using manually provided value, another by taking the current UTC date from the function.
+
+The last line outputs `Freitag, 7. Februar 2020`. Neat for running it with [`CASE`](sfmc-sql-case) to change your short date into an extended date personalized on user language.
 
 ### Standard date formats
 
-Above, you have seen three different format specifiers used to manipulate the date, but there is much more available. You can find the most useful below:
+Above, you have seen three different format specifiers used to manipulate the date, but there are much more available. You can find the most useful below:
 
 | Format specifier | Description | Example (for US culture) |
 | -- | -- | -- |
@@ -77,13 +143,13 @@ Above, you have seen three different format specifiers used to manipulate the da
 | 'F' | Full long time | Friday, October 30, 2020 2:15:30 PM |
 | 'r'/'R' | RFC1123 | Fri, 30 Oct 2020 14:15:30 GMT |
 
-Just as highlighted in the table header - the examples are for the SFMC default US culture formating. If you add another culture code as a third parameter, the outcome will be different, as various countries have different defaults of elements order.
+Just as highlighted in the table header - the examples are for the SFMC default US culture formating. If you add specific culture code as a third parameter, the outcome will be different, as various countries have different defaults of elements order and separator style.
 
 You can find the full list of standard date format specifiers on [Microsoft .Net Doc Pages](https://docs.microsoft.com/en-us/dotnet/standard/base-types/standard-date-and-time-format-strings).
 
 ### Custom date formats
 
-Of course, you are not limited to the formats shown above. Whenever you want something different, you can create your format by just providing full pattern instead of short specifier by using those:
+Of course, you are not limited to the formats shown above. Whenever you want something different, you can create custom format by just providing full pattern instead of short specifier by using those elements:
 
 | Format specifier | Description | Example (for US culture) |
 | -- | -- | -- |
@@ -120,4 +186,10 @@ SELECT
 
 Above query will return `Saturday (30 October 2020) - 02:15`.
 
-You can find the full list of custom date format specifiers [Microsoft .Net Doc Pages](https://docs.microsoft.com/en-us/dotnet/standard/base-types/custom-date-and-time-format-strings).
+You can find the full list of custom date format specifiers on [Microsoft .Net Doc Pages](https://docs.microsoft.com/en-us/dotnet/standard/base-types/custom-date-and-time-format-strings).
+
+:::note You Should Know
+
+AMPScript uses very similar custom formatting with `FORMAT()` and `FORMATDATE()` functions. Depending on the use case, consider whether you want to manipulate the date visual representation in the Data Extension or only in the communication.
+
+:::
