--- a/docs/sql/sfmc-sql-conversion-functions.mdx
+++ b/docs/sql/sfmc-sql-conversion-functions.mdx
@@ -140,7 +140,7 @@ It is happening because conversions from `DECIMAL` or `FLOAT` to `INT` are trunc
 
 ### CONVERT Style Codes
 
-Just as with data types - there are many style codes available. Here I will cover just the most popular ones (if you don't understand some formats codes, check [date formats guide](smfc-sql-date-functions#custom-date-formats)):
+Just as with data types - there are many style codes available. Here I will cover just the most popular ones (if you don't understand some formats codes, check [date formats guide](sfmc-sql-date-functions/#custom-date-formats)):
 
 | Date format | Style code |
 | -- | -- |
