--- a/docs/config/sfmc-config-permissions.mdx
+++ b/docs/config/sfmc-config-permissions.mdx
@@ -9,9 +9,9 @@ import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content="Welcome to the jungle, we've got Roles and Permissions." />
 
-## Roles and Permissions Best Practices
+## Permissions Best Practices
 
-### Standard Roles vs Custom Roles
+### Standard vs Custom Roles
 
 The best way to work with Roles and Permissions in Salesforce Marketing Cloud is to leverage standard roles and only build on top of them with custom permissions/roles. Creating custom roles from scratch (even by copying existing standard role) is not recommended. There are two reasons for this:
 
@@ -47,15 +47,33 @@ Such mixes are happening in multiple parts of Marketing Cloud and might change f
 
 :::
 
-However, Standard Roles not always align perfectly with your needs. The widespread use case would be hiding shared folders via permissions or blocking deletion rights for some users. It is where custom work is needed. Below I have listed details on the permissions currently available in Salesforce Marketing Cloud Setup.
+However, Standard Roles not always align perfectly with your needs. The widespread use case would be hiding shared folders via permissions or blocking deletion rights for some users. It is where custom work is needed.
 
-For better readability, I have split them by Studio/Builder, so they are not in the same order as in Setup.
+### Permission Overlap
+
+When working with multiple roles or overlapping permissions, be sure to check what is the outcome on the user.
+
+Marketing Cloud goes with the most restrictive resulting permission possible:
+
+1. If at least one permission (role-based or individual) is set to Deny - the user will __not__ be able to use the feature.
+2. If there is neither Allow nor Deny permission - the user will __not__ be able to use the feature.
+3. If there is at least one Allow permission and not even one Deny permission - the user will be able to use the feature.
+
+You can check the outcome by going to Setup > Users > Users > clicking checkbox next to a user > clicking Manage Roles > Edit Permissions. In this place, you can not only configure individual permissions but also, by expanding to the final permission level, check current result permission along with the source for that state.
 
 ---
 
-## General Permissions
+## SFMC Permissions
 
-### Salesforce Marketing Cloud
+ Below I have listed details on the permissions currently available in Salesforce Marketing Cloud Setup. For better readability, I have split them by Studio/Builder, so they are not in the same order as in Setup.
+
+ To search for specific permission you can use site search in top right or browser search (`CMD`/`Ctrl`+`F` keys).
+
+---
+
+### General Permissions
+
+#### Salesforce Marketing Cloud
 
 Contains a mix of permissions for:
 - Marketing Cloud Dashboard tools
@@ -63,71 +81,84 @@ Contains a mix of permissions for:
 - Marketing Cloud Roles
 - Some __Legacy__ or unreleased functions like _Pulse_ or _Watchdog_.
 
-### Tags
+One of the most important permissions here is:
+
+- Salesforce Marketing Cloud > Contacts > Read Contact Data.
+
+It is used in multiple SFMC areas and is required for them to work.
+
+#### Tags
 
 Permissions for Marketing Cloud tagging solution.
 
-### Administration
+#### Administration
 
-Permissions for most of the Setup items.
+Permissions for most of the _Setup_ items.
 
-### Event Notifications
+#### Event Notifications
 
 Permissions for REST API Event Notifications Service.
 
-### Audit Trail
+#### Audit Trail
 
-Permissions for Audit Trail tools.
+Permissions for _Audit Trail_ tools.
 
-### Database Encryption
+#### Database Encryption
 
-Permissions for Transparent Database Encryption.
+Permissions for _Transparent Database Encryption_.
 
 ---
 
-## Email Studio Permissions
+### Email Studio Permissions
 
-### Email
+#### Email
 
 Huge permission set for most of the _Email Studio_ features.
 
+Two of the most important permissions here are:
+
+- Email > Subscribers > Data Extensions > View
+- Email > Subscribers > List > View
+
+They are used in multiple SFMC areas and are required for them to work.
+
 Contains also some permissions for __Legacy__ features like _Omniture TnT_ and _3sixty_.
 
-### Email Send Wizard
+#### Email Send Wizard
 
-Enables Email Send process in Email Studio and partially for single send in Journey Builder.
+Enables Email Send process in _Email Studio_ and partially for single send in _Journey Builder_.
 
-### Distributed Sending
+#### Distributed Sending
 
 Permissions for _Distributed Sending_.
 
-### Transactional Sending
+#### Transactional Sending
 
 Permissions for _Transactional Messaging API_.
 
 ---
 
-## Mobile Studio Permissions
+### Mobile Studio Permissions
 
-### MobileConnect
+#### MobileConnect
 
 Permissions for _MobileConnect_.
 
-### MobilePush
+#### MobilePush
 
 Permissions for _MobilePush_.
 
-### GroupConnect
+#### GroupConnect
 
 Permissions for _Group Connect_.
 
 ---
 
-## Social Studio Permissions
+### Social Studio Permissions
 
 Most permissions are managed from within _Social Studio_ and not available in global Setup.
 
-### SocialEngage
+#### SocialEngage
 
 Permissions for Engage, part of _Social Studio_.
 
@@ -135,160 +166,162 @@ _Perform Workgroup Leader Role_ is permission for an unreleased feature.
 
 ---
 
-## Web Studio Permissions
+### Web Studio Permissions
 
-### CloudPages
+#### CloudPages
 
 Permissions for _Cloud Pages_.
 
 ---
 
-## Interaction Studio Permissions
+### Interaction Studio Permissions
 
 Most permissions are managed from within _Interaction Studio_ and not available in global Setup.
 
-### Interaction Studio
+#### Interaction Studio
 
 Permissions for _Interaction Studio_ (_Evergage_).
 
-### Interaction Studio - Legacy
+#### Interaction Studio - Legacy
 
 __Legacy__ permissions for previous _Interaction Studio_ solution.
 
 ---
 
-## Analytics Builder Permissions
+### Analytics Builder Permissions
 
 _Tracking_ within _Email Studio_ is managed by separate permissions available within [Email](#email) permission group.
 
-### Reports
+#### Reports
 
 Permissions for _Reports_.
 
-### Analytics
+#### Analytics
 
-Permissions for integration with _Google Analytics_.
+Additional permissions for _Reports_ and integration with _Google Analytics_.
 
-### CampaignAnalytics
+#### CampaignAnalytics
 
 Permissions enabling Campaign objects for _Reports_.
 Available only on Role level (cannot be limited as individual permission).
 
-### Discover
+#### Discover
 
 Permissions for _Discover_ premium feature.
 
 ---
 
-## Journey Builder Permissions
+### Journey Builder Permissions
 
-### Automation Studio
+#### Automation Studio
 
 Permissions for _Automation Studio_.
 
-### Journey Builder
+#### Journey Builder
 
 Permissions for _Journey Builder_.
 
 ---
 
-## Content Builder Permissions
+### Content Builder Permissions
 
-### Content Builder
+#### Content Builder
 
 Permissions for _Content Builder_.
 
-### Approvals (Email)
+#### Workflows and Approvals
 
-?
+Permissions for _Content Builder_ Approval tool.
 
-### Workflows and Approvals
+#### Approvals (Email)
 
-Permissions for Content Builder Approval tool.
+Additional Permissions for _Content Builder_ Approval tool.
 
 ---
 
-## Audience Builder Permissions
+### Audience Builder Permissions
 
-### Contact Builder
+#### Contact Builder
 
 Permissions for _Contact Builder_.
 
-### Audience Builder
+#### Audience Builder
 
 Permissions for _Audience Builder_.
 
-### Active Audiences
+#### Active Audiences
 
 Permissions for _Active Audiences_ - part of _Audience Builder_.
 
-### Audience Builder Enabler
+#### Audience Builder Enabler
 
 Permission for enabling _Audience Builder_.
 
-### Data Factory Utility
+#### Data Factory Utility
 
 Permission related to _Audience Builder_ and _Discover_ (_Analytics Builder_ add-on). Moves data between environments. Configured during implementation. Do not touch.
 
-### Salesforce DMP
+#### Salesforce DMP
 
 Most permissions are managed from within _Salesforce DMP_ and not available in global Setup.
 
-### Einstein Data Analytics
+#### Einstein Data Analytics
 
 Most permissions are managed from within _Einstein Analytics_ and not available in global Setup.
 
-### Datorama
+#### Datorama
 
 Most permissions are managed from within _Datorama_ and not available in global Setup.
 
-### Datorama Reports
+#### Datorama Reports
 
 Permissions for _Datorama Reports_ - part of _Datorama_.
 
 ---
 
-## AppExchange Permissions
+### AppExchange Permissions
 
-### DeveloperApp
-
-?
-
-### HubExchange
+#### HubExchange
 
 Permissions for _AppExchange_.
 
 ---
 
-## Legacy Permissions
+### Legacy Permissions
 
-### Marketo
+Below you can find permissions for solutions that are no longer offered by Salesforce. No need to worry about them.
+
+#### Marketo
 
 __Legacy__ permissions for integration with _Adobe Marketo_.
 
-### Xpress
+#### Xpress
 
 __Legacy__ permissions.
 
-### AdobeAnalytics
+#### AdobeAnalytics
 
 __Legacy__ permissions for integration with _Adobe Analytics_.
 
-### tmMessenger
+#### tmMessenger
 
 __Legacy__ permissions for integration with _TicketMaster_.
 
-### LEMI
+#### LEMI
 
 __Legacy__ permissions.
 
-### 3sixty
+#### 3sixty
 
 __Legacy__ permissions for integration with _3sixty_ elearning platform.
 
-### Extension Manager
+#### Extension Manager
 
 __Legacy__ permissions for _Marketing Cloud Extension Manager_.
+
+#### DeveloperApp
+
+__Legacy__ permissions.
 
 
 
